# type

./: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  justfile
.forgejo/issue_template/: bug_report.yaml  config.yaml  feature_request.yaml
.forgejo/scripts/: wait-for-quality.sh
.forgejo/workflows/: deploy.yaml  quality.yaml
.github/workflows/: redirect-pr-to-forgejo.yaml
corpus/code/c/: glibc_malloc_consolidate.c  glibc_memmem.c  neovim_cmdpreview.c  neovim_extmark_details.c  neovim_string_upper.c  neovim_wildmode.c
corpus/code/cpp/: libstdcxx_hashtable_erase.cpp  libstdcxx_hashtable_find.cpp  libstdcxx_hashtable_insert.cpp  libstdcxx_heap_adjust_pop.cpp  libstdcxx_heap_make.cpp  libstdcxx_tree_bounds.cpp  libstdcxx_uninitialized_copy.cpp  libstdcxx_uninitialized_dispatch.cpp  libstdcxx_vector_assign_aux.cpp  libstdcxx_vector_erase_assign.cpp  libstdcxx_vector_fill_insert.cpp  libstdcxx_vector_realloc_insert.cpp  llvm_capture_tracking.cpp
corpus/code/javascript/: typescript_build.js  typescript_lkg_task.js
corpus/code/lua/: neovim_diagnostic_list.lua  neovim_lsp_client.lua  neovim_shared_deep_equal.lua  neovim_shared_extend.lua
corpus/code/nix/: nixpkgs_bat.nix  nixpkgs_eza.nix  nixpkgs_fzf.nix  nixpkgs_nix_module.nix  (+2 more)
public/: code-corpus.js  corpus.js  index.html  main.css  main.js
scripts/: audit-nvim-highlights.py  generate-code-corpus.py  update-code-corpus.sh  update-corpus.sh
scripts/corpus/: audit-nvim-highlights.py  generate-code-corpus.py  update-code-corpus.sh
src/: keyboard.rs  main.rs
style/: main.css
(+36 files in other folders)
