[package]
name = "type-barrettruth-com"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.15", features = ["csr"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Document", "Element", "KeyboardEvent", "ScrollBehavior", "ScrollIntoViewOptions", "ScrollLogicalPosition", "Window"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
